[gd_scene load_steps=3 format=3 uid="uid://ccivih8mxlv61"]

[ext_resource type="Script" uid="uid://bkgieridxbqpf" path="res://UI/card_ui.gd" id="1_qbe4h"]
[ext_resource type="Texture2D" uid="uid://3j8dhf7kmeed" path="res://Images/Goblin.jpg" id="2_f3yd6"]

[node name="CardUi" type="Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1077.0
offset_bottom = -573.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_qbe4h")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 75.0
offset_bottom = 154.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Art" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(75, 100)
layout_mode = 2
texture = ExtResource("2_f3yd6")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Test"

[node name="StatLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Test"

[node name="CostLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.326422, 0.532406, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 18
text = "3"

[connection signal="mouse_entered" from="." to="." method="_on_card_hovered"]
[connection signal="mouse_exited" from="." to="." method="_on_card_hover_exit"]
